--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div>
-        <img src="D:\html_assignment\image\sumeet.jpg" height="130px" alt="Image"><br>
+        <img src="image/sumeet.jpg" height="130px" alt="Image"><br>
         <h2><u>Sumeet Kumar</u></h2>
         <p><b>Vill. Tajpur Post Bhaithia Dist. Lakhimpur Kheri-262802</b></p>
         <p><b>Contact No-: 6394890763</b></p>
